--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "unit10hw",
+  "name": "employeegeneratorapp",
   "version": "1.0.0",
-  "description": "OOP and testing for week 10 homework",
+  "description": "Generate a summary of your employees with the Employee team summary generator application!",
   "main": "app.js",
   "directories": {
     "lib": "lib",
@@ -10,16 +10,6 @@
   "scripts": {
     "test": "jest --verbose test/*"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/stevetrilogy/unit10hw.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/stevetrilogy/unit10hw/issues"
-  },
-  "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
   "dependencies": {
     "inquirer": "^6.3.1"
   },
